minor spacing issues

--- a/style.css
+++ b/style.css
@@ -3112,7 +3112,7 @@ footer {
     footer {
         clip-path: polygon(0 11%, 33% 5%, 35% 10%, 100% 2%, 100% 16%, 100% 15%, 100% 100%, 82% 100%, 85% 100%, 15% 100%, 19% 100%, 0 100%);
         /* height: 375px; */
-        padding-bottom: 35px;
+        padding-bottom: 25px;
     }
 
     .footer-container {
@@ -4077,7 +4077,7 @@ footer {
     
     footer {
         clip-path: polygon(0 11%, 33% 5%, 35% 10%, 100% 2%, 100% 16%, 100% 15%, 100% 100%, 82% 100%, 85% 100%, 15% 100%, 19% 100%, 0 100%);
-        height: 352px;
+        /* height: 352px; */
 
     }
 
@@ -4749,7 +4749,9 @@ footer {
         padding-top: 40px;
         padding-bottom: 30px;
     }
-    
+    footer{
+        height: 350px;
+    }
 }
 @media (max-width: 330px) {
        .hero-character-background{
